--- a/package.json
+++ b/package.json
@@ -1,25 +1,35 @@
 {
     "private": true,
     "scripts": {
-        "dev": "vite",
-        "build": "vite build"
+        "dev": "npm run development",
+        "development": "mix",
+        "watch": "mix watch",
+        "watch-poll": "mix watch -- --watch-options-poll=1000",
+        "hot": "mix watch --hot",
+        "prod": "npm run production",
+        "production": "mix --production"
     },
     "devDependencies": {
-        "@tailwindcss/forms": "^0.5.2",
+        "@tailwindcss/forms": "^0.5.3",
         "@tailwindcss/typography": "^0.5.9",
-        "alpinejs": "^3.4.2",
-        "autoprefixer": "^10.4.2",
-        "axios": "^1.4.0",
-        "laravel-vite-plugin": "^0.7.8",
-        "lodash": "^4.17.21",
-        "postcss": "^8.4.6",
-        "tailwindcss": "^3.1.0",
-        "vite": "^4.3.9"
+        "alpinejs": "^3.12.2",
+        "autoprefixer": "10.4.5",
+        "axios": "^0.25",
+        "laravel-mix": "^6.0.49",
+        "lodash": "^4.17.19",
+        "postcss": "^8.4.16",
+        "postcss-import": "^14.0.2",
+        "tailwindcss": "^3.1.8"
     },
     "dependencies": {
         "chart.js": "^4.3.0",
         "chartjs-adapter-moment": "^1.0.1",
         "flatpickr": "^4.6.13",
-        "moment": "^2.29.4"
+        "moment": "^2.29.4",
+        "shiki": "^0.14.3",
+        "simple-icons": "^9.9.0",
+        "pinia": "^2.1.6",
+        "vue": "^3.2.36",
+        "vue-router": "^4.2.4"
     }
 }
